--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "saloonphp/saloon": "3.0",
+        "spatie/ssh": "^1.13",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
