--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "saloonphp/saloon": "3.0",
+        "spatie/laravel-queueable-action": "^2.16",
         "spatie/ssh": "^1.13",
         "tightenco/ziggy": "^2.4"
     },
